--- a/test-1.html
+++ b/test-1.html
@@ -1264,7 +1264,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; height: auto; min-height: fit-content; box-sizing: border-box;">
     
-    <div style="background: #ffffff; padding: 25px; border-radius: 20px; border: 1px solid #e1e8e1; box-sizing: border-box; transition: all 0.3s ease;">
+    <div style="background: #ffffff; padding: 25px; border-radius: 20px; border: 1px solid #e1e8e1; box-sizing: border-box; transition: all 0.3s ease; text-align: left;">
       <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
         <div style="display: flex; align-items: center; justify-content: center; background: #f8fafc; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
@@ -1281,7 +1281,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       </p>
     </div>
 
-    <div style="background: #f4f7f9; padding: 25px; border-radius: 20px; border: 1px solid #d1d9e0; box-sizing: border-box; transition: all 0.3s ease;">
+    <div style="background: #f4f7f9; padding: 25px; border-radius: 20px; border: 1px solid #d1d9e0; box-sizing: border-box; transition: all 0.3s ease; text-align: left;">
       <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
         <div style="display: flex; align-items: center; justify-content: center; background: #f8fafc; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
