--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -400,7 +400,7 @@
     .live-dot {
       width: 6px;
       height: 6px;
-      background-color: #10b981;
+      background-color: #ff4d4d;
       border-radius: 50%;
       display: inline-block;
       animation: live-pulse 2s infinite ease-in-out;
