--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -629,12 +629,12 @@
     </div>
 
     <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
     <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Rank</span>
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
     </div>
 
