--- a/test-1.html
+++ b/test-1.html
@@ -493,8 +493,8 @@ gtag('config', 'G-H1JW8YBDZ8');
 
  
   <div class="activity-card">
-    <div class="activity-card-inner" style="padding: 14px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px;">
-      <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
+    <div class="activity-card-inner" style="padding: 14px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px; flex-wrap: wrap;">
+      <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 250px;">
         <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px;">
           <span class="status-dot-live"></span>
           <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">UPCOMING</span>
@@ -508,33 +508,38 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
       </div>
 
-      <div class="stats-container" style="display: flex; align-items: center; gap: 24px;">
-        <div class="score-group" style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
-          <div style="display: flex; justify-content: flex-end; gap: 30px;">
-            <span style="color: #94a3b8; font-size: 9px; font-weight: 800; width: 85px; text-align: right;">R1 - R2 - R3</span>
-            <span style="color: #94a3b8; font-size: 9px; font-weight: 800; width: 70px; text-align: right;">PAR / TOTAL</span>
+      <div class="stats-container" style="display: flex; align-items: center; gap: 20px; margin-left: auto;">
+        <div style="display: table; border-collapse: separate; border-spacing: 20px 0; border-right: 1px solid #f1f5f9; padding-right: 20px;">
+          <div style="display: table-row;">
+            <div style="display: table-cell; color: #0c2340; font-size: 10px; font-weight: 800; text-align: center; padding-bottom: 4px;">R1 - R2 - R3</div>
+            <div style="display: table-cell; color: #0c2340; font-size: 10px; font-weight: 800; text-align: center; padding-bottom: 4px;">PAR / TOTAL</div>
           </div>
-          <div style="display: flex; justify-content: flex-end; gap: 30px; align-items: center;">
-            <div style="display: flex; gap: 10px; width: 85px; justify-content: flex-end;">
-              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
-              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
-              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+          <div style="display: table-row;">
+            <div style="display: table-cell; text-align: center;">
+              <div style="display: flex; gap: 10px; justify-content: center;">
+                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+              </div>
             </div>
-            <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
-              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
-              <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+            <div style="display: table-cell; text-align: center;">
+              <div style="display: flex; gap: 8px; justify-content: center;">
+                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+              </div>
             </div>
           </div>
         </div>
         
-        <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 34px;">
-          <span style="color: #94a3b8; font-size: 8px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
+        <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
+          <span style="color: #0c2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
           <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">-</div>
         </div>
 
-        <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
+        <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; padding: 5px;">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="7" y1="17" x2="17" y2="7"></line>
+            <polyline points="7 7 17 7 17 17"></polyline>
           </svg>
         </a>
       </div>
