--- a/test-1.html
+++ b/test-1.html
@@ -551,8 +551,8 @@ gtag('config', 'G-H1JW8YBDZ8');
       <h2 style="font-size: 17px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; line-height: 1.2;">
         CURRENT FOCUS
       </h2>
-      <p style="margin: 4px 0 0 0; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
-        Current priorities & seasonal progress
+      <p style="margin: 4px 0 0 0; color: #64748b; font-size: 14.5px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
+        Current priorities & seasonal progress note
       </p>
     </div>
     <div class="focus-arrow-svg">
