--- a/test-1.html
+++ b/test-1.html
@@ -546,9 +546,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 
-    
-
-    <div class="focus-container" style="display: flex; align-items: center; justify-content: space-between; padding: 15px 20px; background: #ffffff; border-radius: 12px; border: 1px solid #e2e8f0;">
+  <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="focus-container">
     <div style="display: flex; align-items: center; gap: 16px; flex: 1;">
       <h2 style="font-size: 17px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; line-height: 1.2;">
         CURRENT FOCUS
@@ -557,14 +555,16 @@ gtag('config', 'G-H1JW8YBDZ8');
         Current priorities & seasonal progress note
       </p>
     </div>
-    
-    <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="focus-arrow-svg" style="text-decoration: none; display: flex; align-items: center; gap: 8px;">
+    <div class="focus-arrow-svg">
         <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">SEE MORE</span>
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
         <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
       </svg>
-    </a>
-</div>
+    </div>
+  </a>
+
+
+
 
 
   
