--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ gtag('config', 'G-H1JW8YBDZ8');
 
 <div class="menu-footer">
 <span class="footer-name">JOSHUA HONG</span>
-<span class="footer-team">UTSA MEN'S GOLF</span>
+<span class="footer-team">UTSA MEN'S GOLF | FRESHMAN</span>
 </div>
 </nav>
 </header>
