--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ gtag('config', 'G-H1JW8YBDZ8');
   JOSHUA HONG
 </h1>
     <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
-      UTSA MEN'S GOLF
+      UTSA MEN'S GOLF | FRESHMAN
     </p>
   </div>
 
