--- a/test-1.html
+++ b/test-1.html
@@ -1370,49 +1370,27 @@
         <tbody>
 
           <tr>
-
             <td class="col-left">
-
-              <div style="color: #999; font-weight: 700; font-size: 11px;">Dec 2025</div>
-
+              <div style="color: #333; font-weight: 700; font-size: 11px;">Dec 2025</div>
               <div style="display: flex; align-items: center; flex-wrap: wrap;">
-
                 <span style="font-weight: 800; color: #0c2340; font-size: 16px;">Patriot All-America Invitational</span>
-
                 <a href="https://www.golfgenius.com/pages/5776911" target="_blank" class="leaderboard-btn">
-
                   <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
-
                 </a>
-
               </div>
-
               <div style="font-size: 11px; color: #c98a2e; font-weight: 700; letter-spacing: -0.2px;">WAGR Pwr: 806.3420 / Pts.: 6.1052</div>
-
               <div style="font-size: 11px; color: #475569; font-weight: 800; margin-top: 2px;">Head-to-Head: 42-37-5</div>
-
               <div class="mobile-score-bar">
-
-                <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">71-73-72</span></div>
-
-                <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">216</span></div>
-
-                <div class="m-item"><span class="m-label">PAR</span><span class="m-value">+6</span></div>
-
-                <div class="m-item"><span class="m-label">FINISH</span><span class="m-value" style="color:#0c2340;">T38</span></div>
-
+                <div class="m-item"><span class="m-label" style="color: #333;">R1-R2-R3</span><span class="m-value" style="color: #333; font-weight: 800;">71-73-72</span></div>
+                <div class="m-item"><span class="m-label" style="color: #333;">TOTAL</span><span class="m-value" style="color: #333; font-weight: 800;">216</span></div>
+                <div class="m-item"><span class="m-label" style="color: #333;">PAR</span><span class="m-value" style="color: #333; font-weight: 700;">+6</span></div>
+                <div class="m-item"><span class="m-label" style="color: #333;">FINISH</span><span class="m-value" style="color:#0c2340; font-weight: 700;">T38</span></div>
               </div>
-
             </td>
-
             <td class="hide-on-mobile">71-73-72</td>
-
             <td class="hide-on-mobile" style="font-weight: 700;">216</td>
-
             <td class="hide-on-mobile" style="font-weight: 800;">+6</td>
-
             <td class="hide-on-mobile" style="font-weight: 800; color: #0c2340;">T38</td>
-
           </tr>
 
         </tbody>
