--- a/junior-career.html
+++ b/junior-career.html
@@ -600,7 +600,6 @@
       <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
     </div>
-  </div>
 
   <script>
     const jrImages = [
@@ -615,14 +614,6 @@
     ];
 
     function popupJrGallery(index) {
-      // Logic for Views Count (Initial 1)
-      let currentViews = localStorage.getItem('jr_gallery_views');
-      if (!currentViews) {
-          currentViews = 0;
-      }
-      currentViews = parseInt(currentViews) + 1;
-      localStorage.setItem('jr_gallery_views', currentViews);
-
       const w = window.innerWidth > 1100 ? 1100 : window.innerWidth;
       const h = window.innerHeight > 950 ? 950 : window.innerHeight;
       const left = (screen.width / 2) - (w / 2);
@@ -641,7 +632,7 @@
       htmlContent += '.close-btn-bottom { background: #fff; color: #000; border: none; padding: 18px 60px; border-radius: 40px; font-weight: 900; font-size: 18px; cursor: pointer; letter-spacing: 2px; transition: 0.3s; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }';
       htmlContent += '.close-btn-bottom:hover { background: #ff4d4d; color: #fff; transform: scale(1.05); }';
       htmlContent += '.info-row { display: flex; align-items: center; gap: 20px; opacity: 0.6; }';
-      htmlContent += '.counter, .view-count { font-size: 14px; letter-spacing: 2px; font-weight: 600; display: flex; align-items: center; gap: 8px; }';
+      htmlContent += '.counter { font-size: 14px; letter-spacing: 2px; font-weight: 600; display: flex; align-items: center; gap: 8px; }';
       htmlContent += '@media (max-width: 768px) { body { padding-top: 60px; } .nav-btn { display: none; } #close-x { font-size: 45px; top: 15px; right: 15px; } #mainImg { max-height: 60vh; } .close-btn-bottom { padding: 15px 45px; font-size: 15px; } }';
       htmlContent += '</style></head><body>';
       htmlContent += '<div id="close-x" onclick="window.close()">×</div>';
@@ -651,8 +642,6 @@
       htmlContent += '<div class="bottom-controls">';
       htmlContent += '  <button class="close-btn-bottom" onclick="window.close()">CLOSE WINDOW</button>';
       htmlContent += '  <div class="info-row">';
-      htmlContent += '    <div class="view-count"><span>👁</span> ' + currentViews.toLocaleString() + '</div>';
-      htmlContent += '    <div style="width: 1px; height: 12px; background: rgba(255,255,255,0.3);"></div>';
       htmlContent += '    <div class="counter" id="countDisplay">' + (index + 1) + ' / ' + jrImages.length + '</div>';
       htmlContent += '  </div>';
       htmlContent += '</div>';
