--- a/test-1.html
+++ b/test-1.html
@@ -1979,7 +1979,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
     .scroll-nav {
       position: absolute;
-      /* 하단 패딩을 제외한 그리드 콘텐츠의 수직 중앙 배치 */
+      /* 하단 패딩을 제외한 그리드 콘텐츠의 수직 중앙 배치 고정 */
       top: 50%;
       transform: translateY(-50%);
       width: 44px;
