--- a/test-1.html
+++ b/test-1.html
@@ -1915,23 +1915,30 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
     <h3 style="margin: 0; color: #0c2340; font-size: 16px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">JOURNEY IN PHOTOS</h3>
   </div>
 
-<style>
+
+  <style>
+    /* 화살표 배치를 위한 기준점 컨테이너 */
     #thumbWrapper {
       position: relative;
-      overflow: visible; /* 화살표 노출을 위해 변경 */
       width: 100%;
       box-sizing: border-box;
-      touch-action: pan-y;
       margin-bottom: 20px;
     }
+    
+    /* 실제 슬라이드가 일어나는 창 (창 밖의 콘텐츠를 숨김) */
+    .scroll-viewport {
+      overflow: hidden;
+      width: 100%;
+      border-radius: 16px;
+    }
+
     #thumbScroll {
       display: flex;
       transition: transform 0.6s cubic-bezier(0.65, 0, 0.35, 1);
       will-change: transform;
       width: 100%;
-      overflow: hidden; /* 그리드 밖으로 나가는 페이지 숨김 */
-      border-radius: 16px;
     }
+
     .thumb-page {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -1940,8 +1947,9 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       flex: 0 0 100%;
       width: 100%;
       box-sizing: border-box;
-      padding: 0 15px; /* 하단 패딩 제거하여 수직 중앙 정렬 정확도 확보 */
+      padding: 0 15px; /* 수직 중앙 정렬을 위해 하단 여백 제거 */
     }
+
     .thumb-img {
       width: 100%;
       aspect-ratio: 1 / 1.1;
@@ -1954,6 +1962,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       transition: all 0.3s ease;
       display: block;
     }
+
     .thumb-img:hover {
       transform: translateY(-5px);
       box-shadow: 0 15px 30px rgba(0,0,0,0.1);
@@ -1961,22 +1970,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
     
     .pos-center { object-position: center center !important; }
 
-    @media (max-width: 768px) {
-      .thumb-page {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        gap: 8px;
-        padding: 0 10px;
-      }
-      .thumb-img {
-        aspect-ratio: 1 / 1.2;
-      }
-      .scroll-nav { 
-        width: 32px !important; 
-        height: 32px !important; 
-      }
-    }
-
+    /* 네비게이션 화살표 정밀 배치 */
     .scroll-nav {
       position: absolute;
       top: 50%;
@@ -1996,13 +1990,23 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       color: #0c2340;
     }
     .scroll-nav:hover { background: #0c2340; color: #fff; }
-    .scroll-nav.prev { left: -22px; } /* 그리드 살짝 바깥에 배치하여 가독성 증대 */
+    .scroll-nav.prev { left: -22px; }
     .scroll-nav.next { right: -22px; }
 
-    /* 모바일에서는 그리드 안쪽으로 화살표 이동 */
     @media (max-width: 1200px) {
       .scroll-nav.prev { left: 5px; }
       .scroll-nav.next { right: 5px; }
+    }
+
+    @media (max-width: 768px) {
+      .thumb-page {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 8px;
+        padding: 0 10px;
+      }
+      .thumb-img { aspect-ratio: 1 / 1.2; }
+      .scroll-nav { width: 32px !important; height: 32px !important; }
     }
   </style>
 
@@ -2014,30 +2018,32 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
     </div>
 
-    <div id="thumbScroll">
-      <div class="thumb-page">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Military-Collegiate-poster.jpg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-Result-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r3-71.jpeg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-70.jpeg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-line-up-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(this)" class="thumb-img">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(this)" class="thumb-img">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(this)" class="thumb-img">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(this)" class="thumb-img">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(this)" class="thumb-img">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(this)" class="thumb-img">
-      </div>
-      <div class="thumb-page">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(this)" class="thumb-img">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(this)" class="thumb-img">
-        <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(this)" class="thumb-img">
+    <div class="scroll-viewport">
+      <div id="thumbScroll">
+        <div class="thumb-page">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Military-Collegiate-poster.jpg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-Result-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r3-71.jpeg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-70.jpeg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-line-up-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(this)" class="thumb-img">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(this)" class="thumb-img">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(this)" class="thumb-img">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(this)" class="thumb-img">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(this)" class="thumb-img">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(this)" class="thumb-img">
+        </div>
+        <div class="thumb-page">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(this)" class="thumb-img">
+          <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(this)" class="thumb-img pos-center">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(this)" class="thumb-img">
+          <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(this)" class="thumb-img">
+        </div>
       </div>
     </div>
   </div>
