--- a/test-1.html
+++ b/test-1.html
@@ -359,21 +359,21 @@
       Official News & Press Articles
     </h3>
 
-    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
-      <a href="#ncaa-career" style="text-decoration: none;">
-        <div style="background: #f8fafc; border: 1px solid #e2e8f0; padding: 14px; border-radius: 10px; text-align: center; transition: 0.2s;">
-          <div style="font-size: 10px; color: #64748b; font-weight: 700; text-transform: uppercase; margin-bottom: 2px; letter-spacing: 0.5px;">Current Stage</div>
-          <div style="font-size: 14px; color: #0c2340; font-weight: 800;">NCAA Career</div>
-        </div>
-      </a>
-
-      <a href="#junior-period" style="text-decoration: none;">
-        <div style="background: #f8fafc; border: 1px solid #e2e8f0; padding: 14px; border-radius: 10px; text-align: center; transition: 0.2s;">
-          <div style="font-size: 10px; color: #64748b; font-weight: 700; text-transform: uppercase; margin-bottom: 2px; letter-spacing: 0.5px;">Archive</div>
-          <div style="font-size: 14px; color: #0c2340; font-weight: 800;">JUNIOR Period</div>
-        </div>
-      </a>
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom: 30px;">
+  <a href="#ncaa-career" style="text-decoration: none;">
+    <div style="background: #0c2340; border-top: 4px solid #f97316; padding: 16px 14px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: 0.2s;">
+      <div style="font-size: 10px; color: rgba(255,255,255,0.7); font-weight: 800; text-transform: uppercase; margin-bottom: 4px; letter-spacing: 1px;">Current Stage</div>
+      <div style="font-size: 15px; color: #ffffff; font-weight: 900; letter-spacing: -0.2px;">NCAA CAREER</div>
     </div>
+  </a>
+
+  <a href="#junior-period" style="text-decoration: none;">
+    <div style="background: #ffffff; border: 1px solid #e2e8f0; border-top: 4px solid #94a3b8; padding: 16px 14px; border-radius: 10px; text-align: center; transition: 0.2s;">
+      <div style="font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; margin-bottom: 4px; letter-spacing: 1px;">Archive</div>
+      <div style="font-size: 15px; color: #0c2340; font-weight: 900; letter-spacing: -0.2px;">JUNIOR YEARS</div>
+    </div>
+  </a>
+</div>
 
   </div>
 </div>
@@ -383,7 +383,7 @@
   
   <h4 style="color: #0c2340; font-size: 16px; margin: 30px 0 15px 0; font-weight: 800; letter-spacing: -0.3px; display: flex; align-items: center;">
     <span style="width: 4px; height: 16px; background: #ff5a00; display: inline-block; margin-right: 10px; border-radius: 2px;"></span>
-    NCAA CAREER OFFICIAL NEWS & PRESS ARTICLES
+    NCAA CAREER
   </h4>
 
   <div style="display: flex; flex-direction: column; gap: 12px;">
@@ -511,7 +511,7 @@
   
   <h4 style="color: #0c2340; font-size: 16px; margin: 30px 0 15px 0; font-weight: 800; letter-spacing: -0.3px; display: flex; align-items: center;">
     <span style="width: 4px; height: 16px; background: #15803d; display: inline-block; margin-right: 10px; border-radius: 2px;"></span>
-    JUNIOR PERIOD OFFICIAL NEWS & PRESS ARTICLES
+    JUNIOR GOLF YEARS
   </h4>
 
   <div style="display: flex; flex-direction: column; gap: 12px;">
