--- a/test-1.html
+++ b/test-1.html
@@ -599,7 +599,7 @@
 
     <details style="width: 100%;">
       <summary style="list-style: none; cursor: pointer; text-align: center; padding: 12px; color: #64748b; font-size: 13px; font-weight: 700; border: 1px dashed #e2e8f0; border-radius: 12px; margin-top: 5px; background: #f8fafc;">
-        See more Junior Period articles <span style="font-size: 10px; margin-left: 5px;">▼</span>
+        See more Junior Years articles <span style="font-size: 10px; margin-left: 5px;">▼</span>
       </summary>
       <div style="display: flex; flex-direction: column; gap: 12px; margin-top: 12px;">
         
