--- a/test-1.html
+++ b/test-1.html
@@ -510,7 +510,11 @@
 
    
 
- <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px 100px;">
+ <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 140px 10px 0;">
+
+
+
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px 100px;">
 
   <div id="junior-period" style="max-width: 800px; margin: 0 auto 50px auto; padding: 0 20px;">
     
