--- a/test-1.html
+++ b/test-1.html
@@ -254,13 +254,18 @@
   <div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 20px; color: #333; background-color: #ffffff; box-sizing: border-box;">
     
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; margin-bottom: 40px;">
-      <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px;">
-        MEDIA COVERAGE & INTERVIEWS
-      </h2>
-      <p style="margin: 8px 0 0; color: #666; font-size: 14px;">
-        Featured interviews, official news, and video highlights
-      </p>
-    </div>
+  <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px;">
+    MEDIA COVERAGE & INTERVIEWS
+  </h2>
+  <div style="display: flex; justify-content: space-between; align-items: flex-end; flex-wrap: wrap; gap: 8px; margin-top: 8px;">
+    <p style="margin: 0; color: #666; font-size: 14px; flex-shrink: 0;">
+      Featured interviews, official news, and video highlights
+    </p>
+    <p style="margin: 0; color: #94a3b8; font-size: 12px; font-weight: 600; font-family: 'Segoe UI', sans-serif;">
+      Last update: Feb 19, 2026
+    </p>
+  </div>
+</div>
 
     <div style="margin-bottom: 50px;">
       <h3 style="color: #0c2340; font-size: 17px; margin-bottom: 20px; display: flex; align-items: center; font-weight: 600;">
